--- a/click_house 데이터 추출 프로토 타입..ipynb
+++ b/click_house 데이터 추출 프로토 타입..ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import pandas as pd\n",
     "import re\n",
     "from datetime import date\n",
+    "import time\n",
     "import datetime\n",
     "import calendar\n",
     "from datetime import date\n",
@@ -3090,10 +3091,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "202010 07 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dateutil.tz import tzlocal\n",
+    "from datetime import datetime\n",
+    "local_tz = tzlocal()\n",
+    "now_time = datetime.now(tz=local_tz)\n",
+    "now_time_str = datetime.now(tz=local_tz).strftime(\"%Y%m%d%H\")\n",
+    "year_month_value = now_time_str[:6]\n",
+    "hour = now_time_str[8:10]\n",
+    "date = now_time_str[6:8]\n",
+    "print(year_month_value,date, hour)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(hour)"
+   ]
   }
  ],
  "metadata": {
